# MovieMatch

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  manage.py  package-lock.json  package.json  purgecss.wrapperclass.js  pyproject.toml  requirements.txt  requirements_base.txt  requirements_dependencies.txt  webpack.config.js  webpack.config.utils.js  webpack.deploy.config.js  webpack.djangopaths.js  webpack.prod.config.js  webpack.purge.config.js
Docker/: Dockerfile  README.md  docker-compose.deploy.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
app_eliminate_movies/: apps.py
app_login_and_reg/: apps.py  views.py
app_select_movies/: apps.py
display_app/: consumer_utils.py  consumers.py  models.py  serializer.py  signals.py  urls.py  views.py
elimination_room/: README.md  admin.py  apps.py  command_requests.py  consumer_utils.py  consumers.py  forms.py  json_response.py  json_socket_response_models.py  models.py  queue_management.py  routing.py  serializer.py  urls.py  user_management.py  views.py
list_builder/: admin.py  apps.py  forms.py  models.py  moviedb_api_caller.py  persona_assigner.py  serializer.py  urls.py  uuid_assigner.py  validators.py  views.py
login_and_reg/: forms.py  urls.py  views.py
movie_match/: README.md  asgi.py  custom_decorators.py  json_response_models.py  settings.py  storages.py  urls.py  wsgi.py
testing_app/: urls.py  views.py
webpack/: README.md  purgecss.wrapperclass.js  webpack.config.js  (+5 more)
(+224 files in other folders)
