[project]
name = "moviematch"
version = "0.1.0"
description = "MovieMatch Fullstack Web App"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt==4.2.1",
    "channels==4.2.2",
    "channels-redis==4.2.0",
    "daphne==4.1.2",
    "django==4.2.23",
    "gunicorn==22.0.0",
    "psycopg==3.1.12",
    "python-dotenv==1.0.0",
    "requests==2.32.5",
    "shortuuid==1.0.11",
]
