[project]
name = "moviematch"
version = "0.1.0"
description = "MovieMatch Fullstack Web App"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt==5.0.0",
    "channels==4.3.2",
    "channels-redis==4.3.0",
    "daphne==4.2.1",
    "django==4.2.30",
    "gunicorn==22.0.0",
    "psycopg==3.3.3",
    "python-dotenv==1.2.2",
    "requests==2.33.1",
    "shortuuid==1.0.11",
]
